[package]
name = "windowsos_simple_multi_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
crossterm = "0.27.0"
getrandom = "0.2.11"
mio = "0.8.10"
